--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -17,7 +17,7 @@
 
 <p>Matching sites</p>
   <% unless @source_pages.present? %>
-    <p>There are no keywords in the text you've entered.</p>
+    <p>There are no pages matching the text you've entered.</p>
   <% else %>
 
     <% @source_pages.each do |source_page| %>
