--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <li><%= link_to_unless_current('Home', root_path) %></li>
     <li><%= link_to_unless_current('Source Pages', source_pages_path) %></li>
     <li><%= link_to_unless_current('Keywords', keywords_path) %></li>
+    <li><%= link_to 'which_people', 'https://github.com/reggieb/which_page', target: '_blank' %></li>
+    <li><%= link_to 'Alchemy API', 'https://github.com/alchemyapi/alchemyapi_ruby' %></li>
   </ul>
 </div>
   
