--- a/app/views/source_pages/show.html.erb
+++ b/app/views/source_pages/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Url:</strong>
-  <%= @source_page.url %>
+  <%= link_to @source_page.url, @source_page.url, target: '_blank' %>
 </p>
 
 <p>Keywords</p>
@@ -14,6 +14,11 @@
   </li>
   <% end %>
 </ul>
+
+<p>Content</p>
+<div class="content">
+  <%= @source_page.content %>
+</div>
 
 <%= link_to 'Edit', edit_source_page_path(@source_page) %> |
 <%= link_to 'Back', source_pages_path %>
