--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -15,7 +15,7 @@
   <strong>Criteria found:</strong>
   <%= @criteria.to_sentence %>
 
-<p>Matching sites</p>
+<h2>Matching sites using keywords in page</h2>
   <% unless @source_pages.present? %>
     <p>There are no pages matching the text you've entered.</p>
   <% else %>
@@ -25,5 +25,17 @@
     <% end %>
 
   <% end %>
-    
+
+<h2>Matching sites using Ferret Search</h2>
+  <% unless @search.present? %>
+    <p>There are no pages matching the text you've entered.</p>
+  <% else %>
+
+    <% @search.each do |source_page, score| %>
+      <p><%= link_to source_page.url, source_page %> <%= score %></p>
+    <% end %>
+
+  <% end %>
+      
 <% end %>
+        
