--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -37,5 +37,16 @@
 
   <% end %>
       
+<h2>Matching sites using Fuzzy Search</h2>
+  <% unless @fuzzy_search.present? %>
+    <p>There are no pages matching the text you've entered.</p>
+  <% else %>
+    <p>Using fuzzy words: <%= @fuzzy_words.to_sentence %></p>
+    <% @fuzzy_search.each do |source_page, score| %>
+      <p><%= link_to source_page.url, source_page %> <%= score %></p>
+    <% end %>
+
+  <% end %>      
+      
 <% end %>
         
